ModDocs/draconicadditions/1.5.0/structure/en_us/draconicadditions_722bd.md
§align:center
##### §nDraconic Additions§n

Draconic Evolution's Little Brother!
§rule{colour:0x606060,height:3,width:100%,bottom_pad:4}
Draconic Additions expands Draconic Evolution in a few ways; it aims to allow the player to acquire some DE gear earlier on without breaking the game or the bank, while pushing the limits of your post-end game to the breaking point!
§rule{colour:0x606060,height:3,width:100%,top_pad:3,bottom_pad:12}

§entity[player:FoxMcloud5655]{size:60%,head:"draconicadditions:chaotic_helm",chest:"draconicadditions:chaotic_chest",legs:"draconicadditions:chaotic_legs",boots:"draconicadditions:chaotic_boots"}
// ##########################################################################
§table{width:100%,render_cells:false}
<table column_layout="25,1*"><tr><td></td><td>
§a-Even MORE powerful armor§a
DA adds §link[draconicadditions:chaotic_armor]{alt_text:"Chaotic Armor"}, a step even above the highly coveted §link[draconicevolution:draconic_armor]{alt_text:"Draconic Armor"}!

§a-Even LESS powerful armor§a
DA also adds a step below §link[draconicevolution:wyvern_armor]{alt_text:"Wyvern Armor"} that's obtainable without having to acquire a nether star first, but don't think you're invincible just because you have draconic shielding early on!

§a-Fancy Baubles§a
DA adds some new fangled baubles that enhance your §link[draconicevolution:draconic_energy_shield]{alt_text:"shielded armor"} (whatever you end up wearing) or even give you some of DE's armor effects outside of the armor itself!  One notable example of this is adding §link[draconicadditions:inertia_cancellation_ring]{alt_text:"Inertia Cancellation"} to your creative flight no matter what item ends up granting you flight!
</td></tr></table>